	destination map.
	* Fixed all issues with duplicate Mystic Doors, wrong warp positions when
	using a door, and wrong placement of Mystic Doors in towns.
	* Fixed leader's name not appearing above preexisting Mystic Door in a town
	when creating a new party.
	* Added missing locks in MysticDoor.open and MysticDoor.close.

2013-07-23  GoldenKevin  (revision 214)

	* Cleaned up comments for Mystic Doors.
	* Fixed Alchemist.

2013-07-28  GoldenKevin  (revision 215)

	* Abstracted and refactored some game server specific code to prepare for a
	shop server implementation.
	* Fixed partner rings serialization in CommonPackets.writeCharData.
	* Fixed ShopCharacter.loadPlayer.

2013-07-28  GoldenKevin  (revision 216)

	* Display an error message in the chat when channel change or shop entry
	fails.
	* Set up communication infrastructure for shop server.
	* Game server supports migrating player to the shop server.
	* Implemented the necessary channel scan, chatroom, buddy notifications,
	party notifications, and guild notifications functionality between game and
	shop server.
	* Partially implemented ShopHandler so that a player connecting to the
	server will at least see the cash shop interface.

2013-07-28  GoldenKevin  (revision 217)

	* Added news ticker message functionality to shop server.
	* Implemented shop server packets for cash shop balance, wishlist, max
	characters, storage inventory capacity, cash shop inventory, and gift
	inventory.

2013-07-28  GoldenKevin  (revision 218)

	* Implemented exit button in cash shop.

2013-08-03  GoldenKevin  (revision 219)

	* Support for the newest Kvj format.
	* Fix improper package interpretation of "storage slots" in shop server.
	* Load commodities and cash packages from SQL or Kvj in shop server.

Copyright 2011-2013 GoldenKevin
Copying and distribution of this file, with or without modification, are
permitted provided the copyright notice and this notice are preserved.